fix weird issue with skills section getting overlapped

--- a/src/index.css
+++ b/src/index.css
@@ -187,7 +187,6 @@ main section h4.trail {
 #projects {
   padding-top: 80px;
   text-align: center;
-  height: 100vh;
 }
 
 #projects .projects-header h2 {
@@ -195,7 +194,7 @@ main section h4.trail {
 }
 
 #project-carousel {
-  height: 100%;
+  height: 100vh;
   position: relative;
 }
 
